Added levels for preferences with wall inbetween

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-04T17:14:59.283500Z",
-     "start_time": "2019-10-04T17:14:59.266335Z"
+     "end_time": "2019-10-04T18:34:42.296274Z",
+     "start_time": "2019-10-04T18:34:42.268399Z"
     }
    },
    "outputs": [],
@@ -72,7 +72,9 @@
     "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
     "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall\n",
     "from orangutan.arenas.food import create_arena_with_red_houses\n",
-    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent, create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent"
+    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent, create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent\n",
+    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
+    "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall"
    ]
   },
   {
@@ -3390,6 +3392,63 @@
     "    arena_config.arenas[idx] = create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent(t=5000)\n",
     "    \n",
     "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_distances.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T18:29:45.328922Z",
+     "start_time": "2019-10-04T18:29:44.974119Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_different_sizes_green_goal_separated_by_wall(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_sizes_wall.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T18:33:04.687539Z",
+     "start_time": "2019-10-04T18:33:04.284168Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_same_size_green_goal_separated_by_wall(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_distances_wall.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T18:35:00.309121Z",
+     "start_time": "2019-10-04T18:34:59.845517Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx] = create_arena_with_yellow_goal_separated_by_wall(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/green_yellow.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
   },
