Prepared levels for food and preferences with all configurations

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -3263,9 +3263,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Creating arenas for food category"
    ]
@@ -3277,8 +3275,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-27T04:37:18.710842Z",
      "start_time": "2019-09-27T04:37:18.346047Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3297,8 +3294,7 @@
     "ExecuteTime": {
      "end_time": "2019-09-25T18:02:32.606889Z",
      "start_time": "2019-09-25T18:02:32.259508Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3317,8 +3313,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T16:51:12.065074Z",
      "start_time": "2019-10-02T16:51:08.400788Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3337,8 +3332,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T17:29:32.912430Z",
      "start_time": "2019-10-02T17:29:25.900733Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3352,7 +3346,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for preferences category"
    ]
@@ -3364,7 +3360,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:28:00.400841Z",
      "start_time": "2019-10-04T17:28:00.005222Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3383,7 +3380,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:27:11.134147Z",
      "start_time": "2019-10-04T17:27:10.763932Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3402,7 +3400,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:29:45.328922Z",
      "start_time": "2019-10-04T18:29:44.974119Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3421,7 +3420,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:33:04.687539Z",
      "start_time": "2019-10-04T18:33:04.284168Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3440,7 +3440,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:35:00.309121Z",
      "start_time": "2019-10-04T18:34:59.845517Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3453,11 +3454,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Single file for easier training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create two files for training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T19:23:04.437588Z",
+     "start_time": "2019-10-04T19:23:02.972268Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(128):\n",
+    "    arena_config.arenas[idx*5] = create_arena_with_yellow_goal_separated_by_wall(t=5000)\n",
+    "    arena_config.arenas[idx*5+1] = create_arena_with_same_size_green_goal_separated_by_wall(t=5000)\n",
+    "    arena_config.arenas[idx*5+2] = create_arena_with_different_sizes_green_goal_separated_by_wall(t=5000)\n",
+    "    arena_config.arenas[idx*5+3] = create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent(t=5000)\n",
+    "    arena_config.arenas[idx*5+4] = create_arena_with_different_sizes_green_goal_in_front_of_agent(t=5000)\n",
+    "    \n",
+    "with open(\"/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_preferences/preferences_all.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-04T19:31:49.742694Z",
+     "start_time": "2019-10-04T19:31:44.048935Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/food.yaml')\n",
+    "n_original_arenas = len(arena_config.arenas)\n",
+    "n_repetitions = 15\n",
+    "\n",
+    "for _ in range(n_repetitions):\n",
+    "    for initial_idx in range(n_original_arenas):\n",
+    "        idx = len(arena_config.arenas)\n",
+    "        arena_config.arenas[idx] = arena_config.arenas[initial_idx]\n",
+    "        \n",
+    "n_repetitions = 64\n",
+    "for _ in range(n_repetitions):\n",
+    "    idx = len(arena_config.arenas)\n",
+    "    arena_config.arenas[idx] = create_arena_with_green_and_yellow_goal_in_front_of_agent(t=5000)\n",
+    "    idx = len(arena_config.arenas)\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_goal_coming(t=5000)\n",
+    "    idx = len(arena_config.arenas)\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_wall(t=5000)\n",
+    "    idx = len(arena_config.arenas)\n",
+    "    arena_config.arenas[idx] = create_arena_with_red_houses(t=5000)\n",
+    "    \n",
+    "with open('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/food_all.yaml', 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
   }
  ],
  "metadata": {
