Prepared script for generating arena configs with all the categories

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-04T18:34:42.296274Z",
-     "start_time": "2019-10-04T18:34:42.268399Z"
+     "end_time": "2019-10-05T07:52:16.364620Z",
+     "start_time": "2019-10-05T07:52:16.343977Z"
     }
    },
    "outputs": [],
@@ -74,7 +74,9 @@
     "from orangutan.arenas.food import create_arena_with_red_houses\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent, create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
-    "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall"
+    "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
+    "\n",
+    "from orangutan.arenas.generation import generate_arena_config"
    ]
   },
   {
@@ -3524,6 +3526,79 @@
     "with open('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_009_food/food_all.yaml', 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-05T08:18:50.478387Z",
+     "start_time": "2019-10-05T08:18:50.456591Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: <animalai.envs.arena_config.Arena at 0x7f67aa9b1710>,\n",
+       " 1: <animalai.envs.arena_config.Arena at 0x7f67aa9b0f60>,\n",
+       " 2: <animalai.envs.arena_config.Arena at 0x7f67aa9b0048>,\n",
+       " 3: <animalai.envs.arena_config.Arena at 0x7f67aab03860>,\n",
+       " 4: <animalai.envs.arena_config.Arena at 0x7f67aafd6ef0>,\n",
+       " 5: <animalai.envs.arena_config.Arena at 0x7f67aa9cc668>,\n",
+       " 6: <animalai.envs.arena_config.Arena at 0x7f67aab03fd0>,\n",
+       " 7: <animalai.envs.arena_config.Arena at 0x7f67aa9b03c8>,\n",
+       " 8: <animalai.envs.arena_config.Arena at 0x7f67aa9b1550>,\n",
+       " 9: <animalai.envs.arena_config.Arena at 0x7f67aa9d8b70>,\n",
+       " 10: <animalai.envs.arena_config.Arena at 0x7f67aab035c0>,\n",
+       " 11: <animalai.envs.arena_config.Arena at 0x7f67aab03b00>,\n",
+       " 12: <animalai.envs.arena_config.Arena at 0x7f67aab031d0>,\n",
+       " 13: <animalai.envs.arena_config.Arena at 0x7f67aa9b0748>,\n",
+       " 14: <animalai.envs.arena_config.Arena at 0x7f67aa9b1ba8>,\n",
+       " 15: <animalai.envs.arena_config.Arena at 0x7f67aab033c8>,\n",
+       " 16: <animalai.envs.arena_config.Arena at 0x7f67aab03d30>,\n",
+       " 17: <animalai.envs.arena_config.Arena at 0x7f67aa9b10f0>}"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arena_config = generate_arena_config(t=5000, n=1)\n",
+    "arena_config.arenas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-05T08:15:00.397735Z",
+     "start_time": "2019-10-05T08:15:00.267821Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open('temp.yaml', 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
