--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-24T15:32:47.931306Z",
-     "start_time": "2019-09-24T15:32:47.909277Z"
+     "end_time": "2019-10-05T08:40:32.239036Z",
+     "start_time": "2019-10-05T08:40:32.212134Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-05T07:52:16.364620Z",
-     "start_time": "2019-10-05T07:52:16.343977Z"
+     "end_time": "2019-10-05T08:40:45.106245Z",
+     "start_time": "2019-10-05T08:40:45.088651Z"
     }
    },
    "outputs": [],
@@ -72,7 +72,7 @@
     "from orangutan.arenas.geometry import get_angle_looking_center, get_random_position, normalize_angle, get_position_in_front_of_agent\n",
     "from orangutan.arenas.food import create_arena_with_green_and_yellow_goal_in_front_of_agent, create_arena_with_red_goal_coming, create_arena_with_red_wall\n",
     "from orangutan.arenas.food import create_arena_with_red_houses\n",
-    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent, create_arena_with_different_one_close_and_one_farther_goal_in_front_of_agent\n",
+    "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
     "\n",
@@ -3265,7 +3265,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for food category"
    ]
@@ -3277,7 +3279,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-27T04:37:18.710842Z",
      "start_time": "2019-09-27T04:37:18.346047Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3296,7 +3299,8 @@
     "ExecuteTime": {
      "end_time": "2019-09-25T18:02:32.606889Z",
      "start_time": "2019-09-25T18:02:32.259508Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3315,7 +3319,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T16:51:12.065074Z",
      "start_time": "2019-10-02T16:51:08.400788Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3334,7 +3339,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-02T17:29:32.912430Z",
      "start_time": "2019-10-02T17:29:25.900733Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3457,14 +3463,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Single file for easier training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's create two files for training."
    ]
@@ -3476,7 +3486,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T19:23:04.437588Z",
      "start_time": "2019-10-04T19:23:02.972268Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3499,7 +3510,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T19:31:49.742694Z",
      "start_time": "2019-10-04T19:31:44.048935Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3528,67 +3540,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Single file with all categories using weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
+    "To do that I have prepared a new script to generate levels.\n",
+    "\n",
+    "I need to find a solution for levels that were written by hand. The easiest way is to load the arena and to make functions that return that."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-05T08:18:50.478387Z",
-     "start_time": "2019-10-05T08:18:50.456591Z"
+     "end_time": "2019-10-05T09:17:06.345857Z",
+     "start_time": "2019-10-05T09:17:05.974245Z"
     },
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{0: <animalai.envs.arena_config.Arena at 0x7f67aa9b1710>,\n",
-       " 1: <animalai.envs.arena_config.Arena at 0x7f67aa9b0f60>,\n",
-       " 2: <animalai.envs.arena_config.Arena at 0x7f67aa9b0048>,\n",
-       " 3: <animalai.envs.arena_config.Arena at 0x7f67aab03860>,\n",
-       " 4: <animalai.envs.arena_config.Arena at 0x7f67aafd6ef0>,\n",
-       " 5: <animalai.envs.arena_config.Arena at 0x7f67aa9cc668>,\n",
-       " 6: <animalai.envs.arena_config.Arena at 0x7f67aab03fd0>,\n",
-       " 7: <animalai.envs.arena_config.Arena at 0x7f67aa9b03c8>,\n",
-       " 8: <animalai.envs.arena_config.Arena at 0x7f67aa9b1550>,\n",
-       " 9: <animalai.envs.arena_config.Arena at 0x7f67aa9d8b70>,\n",
-       " 10: <animalai.envs.arena_config.Arena at 0x7f67aab035c0>,\n",
-       " 11: <animalai.envs.arena_config.Arena at 0x7f67aab03b00>,\n",
-       " 12: <animalai.envs.arena_config.Arena at 0x7f67aab031d0>,\n",
-       " 13: <animalai.envs.arena_config.Arena at 0x7f67aa9b0748>,\n",
-       " 14: <animalai.envs.arena_config.Arena at 0x7f67aa9b1ba8>,\n",
-       " 15: <animalai.envs.arena_config.Arena at 0x7f67aab033c8>,\n",
-       " 16: <animalai.envs.arena_config.Arena at 0x7f67aab03d30>,\n",
-       " 17: <animalai.envs.arena_config.Arena at 0x7f67aa9b10f0>}"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
     }
    ],
    "source": [
     "arena_config = generate_arena_config(t=5000, n=1)\n",
-    "arena_config.arenas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-05T08:15:00.397735Z",
-     "start_time": "2019-10-05T08:15:00.267821Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "print(len(arena_config.arenas))\n",
     "with open('temp.yaml', 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
    ]
