Created levels for training 010 using food and preferences levels with weights

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3558,11 +3558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-05T09:17:06.345857Z",
-     "start_time": "2019-10-05T09:17:05.974245Z"
+     "end_time": "2019-10-05T09:26:47.341323Z",
+     "start_time": "2019-10-05T09:26:15.589271Z"
     },
     "scrolled": true
    },
@@ -3571,15 +3571,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42\n"
+      "1344\n",
+      "1344\n",
+      "1344\n",
+      "1344\n"
      ]
     }
    ],
    "source": [
-    "arena_config = generate_arena_config(t=5000, n=1)\n",
-    "print(len(arena_config.arenas))\n",
-    "with open('temp.yaml', 'w') as f:\n",
-    "    yaml.dump(arena_config, f)"
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=32)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_010_food_and_preferences/%02d.yaml' % idx, 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
    ]
   },
   {
