Started to create functions for generating arenas with obstacles

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Automatic-creation-of-arenas\" data-toc-modified-id=\"Automatic-creation-of-arenas-1\">Automatic creation of arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Imports\" data-toc-modified-id=\"Imports-1.1\">Imports</a></span></li><li><span><a href=\"#Arena\" data-toc-modified-id=\"Arena-1.2\">Arena</a></span></li><li><span><a href=\"#Items\" data-toc-modified-id=\"Items-1.3\">Items</a></span></li><li><span><a href=\"#Creating-a-simple-arena\" data-toc-modified-id=\"Creating-a-simple-arena-1.4\">Creating a simple arena</a></span></li><li><span><a href=\"#Loading-and-modifying-arenas\" data-toc-modified-id=\"Loading-and-modifying-arenas-1.5\">Loading and modifying arenas</a></span></li><li><span><a href=\"#Removing-colors-and-changing-time-limit\" data-toc-modified-id=\"Removing-colors-and-changing-time-limit-1.6\">Removing colors and changing time limit</a></span></li><li><span><a href=\"#Creating-first-arenas\" data-toc-modified-id=\"Creating-first-arenas-1.7\">Creating first arenas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Agent-looking-center\" data-toc-modified-id=\"Agent-looking-center-1.7.1\">Agent looking center</a></span></li><li><span><a href=\"#Bad-goal-moving-towards-the-agent\" data-toc-modified-id=\"Bad-goal-moving-towards-the-agent-1.7.2\">Bad goal moving towards the agent</a></span></li><li><span><a href=\"#Green-and-yellow-goal-in-front-of-agent\" data-toc-modified-id=\"Green-and-yellow-goal-in-front-of-agent-1.7.3\">Green and yellow goal in front of agent</a></span></li></ul></li><li><span><a href=\"#Creating-arenas-for-food-category\" data-toc-modified-id=\"Creating-arenas-for-food-category-1.8\">Creating arenas for food category</a></span></li><li><span><a href=\"#Creating-arenas-for-preferences-category\" data-toc-modified-id=\"Creating-arenas-for-preferences-category-1.9\">Creating arenas for preferences category</a></span></li><li><span><a href=\"#Single-file-for-easier-training\" data-toc-modified-id=\"Single-file-for-easier-training-1.10\">Single file for easier training</a></span></li><li><span><a href=\"#Single-file-with-all-categories-using-weights\" data-toc-modified-id=\"Single-file-with-all-categories-using-weights-1.11\">Single file with all categories using weights</a></span></li><li><span><a href=\"#Creating-arenas-for-obstacles-category\" data-toc-modified-id=\"Creating-arenas-for-obstacles-category-1.12\">Creating arenas for obstacles category</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-05T08:40:45.106245Z",
-     "start_time": "2019-10-05T08:40:45.088651Z"
+     "end_time": "2019-10-05T10:28:52.815406Z",
+     "start_time": "2019-10-05T10:28:52.802822Z"
     }
    },
    "outputs": [],
@@ -75,6 +75,9 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
+    "from orangutan.arenas.obstacles import (\n",
+    "    create_arena_with_obstacles\n",
+    ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
    ]
@@ -3354,9 +3357,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Creating arenas for preferences category"
    ]
@@ -3368,8 +3369,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:28:00.400841Z",
      "start_time": "2019-10-04T17:28:00.005222Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3388,8 +3388,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:27:11.134147Z",
      "start_time": "2019-10-04T17:27:10.763932Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3408,8 +3407,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:29:45.328922Z",
      "start_time": "2019-10-04T18:29:44.974119Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3428,8 +3426,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:33:04.687539Z",
      "start_time": "2019-10-04T18:33:04.284168Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3448,8 +3445,7 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:35:00.309121Z",
      "start_time": "2019-10-04T18:34:59.845517Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3587,11 +3583,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating arenas for obstacles category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-05T10:46:16.184522Z",
+     "start_time": "2019-10-05T10:46:16.157027Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arena_config = ArenaConfig()\n",
+    "for idx in range(1):\n",
+    "    arena_config.arenas[idx] = create_arena_with_obstacles(t=5000)\n",
+    "    \n",
+    "with open(\"temp.yaml\", 'w') as f:\n",
+    "    yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "create_arena_with_obstacles"
+   ]
   }
  ],
  "metadata": {
