Created first training levels for obstacles category

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3583,6 +3583,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-06T18:03:20.094241Z",
+     "start_time": "2019-10-06T18:02:44.890353Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1184\n",
+      "1184\n",
+      "1184\n",
+      "1184\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=16)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_011_fpo/%02d.yaml' % idx, 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3591,11 +3620,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-06T17:38:56.755521Z",
-     "start_time": "2019-10-06T17:38:56.717338Z"
+     "end_time": "2019-10-06T17:56:37.601119Z",
+     "start_time": "2019-10-06T17:56:37.563183Z"
     }
    },
    "outputs": [],
