fixed bug in obstacles category generation

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-06T08:49:12.258568Z",
-     "start_time": "2019-10-06T08:49:12.239794Z"
+     "end_time": "2019-10-07T15:51:10.132447Z",
+     "start_time": "2019-10-07T15:51:10.117598Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-06T08:49:13.035884Z",
-     "start_time": "2019-10-06T08:49:12.664702Z"
+     "end_time": "2019-10-07T15:51:10.706409Z",
+     "start_time": "2019-10-07T15:51:10.404574Z"
     }
    },
    "outputs": [],
@@ -66,6 +66,7 @@
     "import yaml\n",
     "import numpy as np\n",
     "import glob\n",
+    "import os\n",
     "\n",
     "from animalai.envs.arena_config import Vector3, RGB, Item, Arena, ArenaConfig\n",
     "\n",
@@ -3608,6 +3609,37 @@
     "    arena_config = generate_arena_config(t=5000, n=16)\n",
     "    print(len(arena_config.arenas))\n",
     "    with open('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_011_fpo/%02d.yaml' % idx, 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-07T15:51:54.006781Z",
+     "start_time": "2019-10-07T15:51:14.149532Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1184\n",
+      "1184\n",
+      "1184\n",
+      "1184\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_012_fpo'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=16)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
     "        yaml.dump(arena_config, f)"
    ]
   },
