create_center_blocked_arena function

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T15:51:10.706409Z",
-     "start_time": "2019-10-07T15:51:10.404574Z"
+     "end_time": "2019-10-07T16:29:42.022716Z",
+     "start_time": "2019-10-07T16:29:42.008004Z"
     }
    },
    "outputs": [],
@@ -77,7 +77,7 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
     "from orangutan.arenas.obstacles import (\n",
-    "    create_arena_with_obstacles\n",
+    "    create_arena_with_obstacles, create_center_blocked_arena\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3652,18 +3652,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-06T17:56:37.601119Z",
-     "start_time": "2019-10-06T17:56:37.563183Z"
+     "end_time": "2019-10-07T16:35:48.951848Z",
+     "start_time": "2019-10-07T16:35:48.930992Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_with_obstacles(t=5000)\n",
+    "    arena_config.arenas[idx] = create_center_blocked_arena(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
