--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T16:29:42.022716Z",
-     "start_time": "2019-10-07T16:29:42.008004Z"
+     "end_time": "2019-10-07T16:39:26.749217Z",
+     "start_time": "2019-10-07T16:39:26.733487Z"
     }
    },
    "outputs": [],
@@ -77,7 +77,7 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
     "from orangutan.arenas.obstacles import (\n",
-    "    create_arena_with_obstacles, create_center_blocked_arena\n",
+    "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3652,18 +3652,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T16:35:48.951848Z",
-     "start_time": "2019-10-07T16:35:48.930992Z"
+     "end_time": "2019-10-07T16:50:43.330063Z",
+     "start_time": "2019-10-07T16:50:43.291270Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_center_blocked_arena(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_splitted_in_two(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
