Created create_arena_splitted_in_four function

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T16:39:26.749217Z",
-     "start_time": "2019-10-07T16:39:26.733487Z"
+     "end_time": "2019-10-07T16:55:08.545576Z",
+     "start_time": "2019-10-07T16:55:08.506428Z"
     }
    },
    "outputs": [],
@@ -77,7 +77,8 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
     "from orangutan.arenas.obstacles import (\n",
-    "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two\n",
+    "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
+    "    create_arena_splitted_in_four\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3652,18 +3653,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T16:50:43.330063Z",
-     "start_time": "2019-10-07T16:50:43.291270Z"
+     "end_time": "2019-10-07T17:05:52.722840Z",
+     "start_time": "2019-10-07T17:05:52.687958Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_splitted_in_two(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_splitted_in_four(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
