--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T16:55:08.545576Z",
-     "start_time": "2019-10-07T16:55:08.506428Z"
+     "end_time": "2019-10-07T17:12:50.115535Z",
+     "start_time": "2019-10-07T17:12:50.100146Z"
     }
    },
    "outputs": [],
@@ -78,7 +78,7 @@
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
     "from orangutan.arenas.obstacles import (\n",
     "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
-    "    create_arena_splitted_in_four\n",
+    "    create_arena_splitted_in_four, create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3359,7 +3359,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Creating arenas for preferences category"
    ]
@@ -3371,7 +3373,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:28:00.400841Z",
      "start_time": "2019-10-04T17:28:00.005222Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3390,7 +3393,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T17:27:11.134147Z",
      "start_time": "2019-10-04T17:27:10.763932Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3409,7 +3413,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:29:45.328922Z",
      "start_time": "2019-10-04T18:29:44.974119Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3428,7 +3433,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:33:04.687539Z",
      "start_time": "2019-10-04T18:33:04.284168Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3447,7 +3453,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-04T18:35:00.309121Z",
      "start_time": "2019-10-04T18:34:59.845517Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -3539,14 +3546,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Single file with all categories using weights"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "After training over night and seeing bad results I have come to the conclusion that shorter arenas need to have smaller frequency than long levels.  \n",
     "To do that I have prepared a new script to generate levels.\n",
@@ -3562,6 +3573,7 @@
      "end_time": "2019-10-05T09:26:47.341323Z",
      "start_time": "2019-10-05T09:26:15.589271Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3591,7 +3603,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-06T18:03:20.094241Z",
      "start_time": "2019-10-06T18:02:44.890353Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3620,7 +3633,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-07T15:51:54.006781Z",
      "start_time": "2019-10-07T15:51:14.149532Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -3653,18 +3667,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T17:05:52.722840Z",
-     "start_time": "2019-10-07T17:05:52.687958Z"
+     "end_time": "2019-10-07T17:17:33.886025Z",
+     "start_time": "2019-10-07T17:17:33.849756Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_splitted_in_four(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_splitted_in_two_with_path_blocked(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
