New training configurations and models trained

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -3622,11 +3622,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T17:26:54.675311Z",
-     "start_time": "2019-10-07T17:26:51.935881Z"
+     "end_time": "2019-10-07T17:40:17.880889Z",
+     "start_time": "2019-10-07T17:39:20.133234Z"
     }
    },
    "outputs": [
@@ -3634,15 +3634,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "424\n"
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Generalization: 48\n",
+      "2208\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Generalization: 48\n",
+      "2208\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Generalization: 48\n",
+      "2208\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Generalization: 48\n",
+      "2208\n"
      ]
     }
    ],
    "source": [
     "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_012_fpo'\n",
     "os.makedirs(folderpath, exist_ok=True)\n",
-    "for idx in range(1):\n",
-    "    arena_config = generate_arena_config(t=5000, n=4)\n",
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=16)\n",
     "    print(len(arena_config.arenas))\n",
     "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
     "        yaml.dump(arena_config, f)"
