--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T15:51:10.132447Z",
-     "start_time": "2019-10-07T15:51:10.117598Z"
+     "end_time": "2019-10-08T15:57:45.105827Z",
+     "start_time": "2019-10-08T15:57:45.093056Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T17:12:50.115535Z",
-     "start_time": "2019-10-07T17:12:50.100146Z"
+     "end_time": "2019-10-08T15:57:45.735600Z",
+     "start_time": "2019-10-08T15:57:45.366252Z"
     }
    },
    "outputs": [],
@@ -79,6 +79,9 @@
     "from orangutan.arenas.obstacles import (\n",
     "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
     "    create_arena_splitted_in_four, create_arena_splitted_in_two_with_path_blocked\n",
+    ")\n",
+    "from orangutan.arenas.avoidance import (\n",
+    "    create_arena_with_obstacles_and_deathzones\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3669,28 +3672,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Creating arenas for obstacles category"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-07T17:17:33.886025Z",
-     "start_time": "2019-10-07T17:17:33.849756Z"
-    },
-    "hidden": true
+     "end_time": "2019-10-08T16:13:32.658297Z",
+     "start_time": "2019-10-08T16:13:32.605597Z"
+    }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_splitted_in_two_with_path_blocked(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_with_obstacles_and_deathzones(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
@@ -3699,9 +3699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "create_arena_with_obstacles"
