--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T15:57:45.105827Z",
-     "start_time": "2019-10-08T15:57:45.093056Z"
+     "end_time": "2019-10-08T16:28:10.341874Z",
+     "start_time": "2019-10-08T16:28:10.324714Z"
     }
    },
    "outputs": [],
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T15:57:45.735600Z",
-     "start_time": "2019-10-08T15:57:45.366252Z"
+     "end_time": "2019-10-08T16:38:01.038405Z",
+     "start_time": "2019-10-08T16:38:01.025650Z"
     }
    },
    "outputs": [],
@@ -76,12 +76,18 @@
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_in_front_of_agent\n",
     "from orangutan.arenas.preferences import create_arena_with_different_sizes_green_goal_separated_by_wall, create_arena_with_same_size_green_goal_separated_by_wall\n",
     "from orangutan.arenas.preferences import create_arena_with_yellow_goal_separated_by_wall\n",
+    "\"\"\"\n",
     "from orangutan.arenas.obstacles import (\n",
     "    create_arena_with_obstacles, create_center_blocked_arena, create_arena_splitted_in_two,\n",
     "    create_arena_splitted_in_four, create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
+    "\"\"\"\n",
     "from orangutan.arenas.avoidance import (\n",
-    "    create_arena_with_obstacles_and_deathzones\n",
+    "    create_arena_with_obstacles_and_deathzones,\n",
+    "    create_center_blocked_arena,\n",
+    "    create_arena_splitted_in_two,\n",
+    "    create_arena_splitted_in_four,\n",
+    "    create_arena_splitted_in_two_with_path_blocked\n",
     ")\n",
     "\n",
     "from orangutan.arenas.generation import generate_arena_config"
@@ -3671,6 +3677,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-08T16:47:10.230531Z",
+     "start_time": "2019-10-08T16:45:50.965063Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "2020\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "2020\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "2020\n",
+      "Food: 35\n",
+      "Preferences: 7\n",
+      "Obstacles: 48\n",
+      "Avoidance: 48\n",
+      "Generalization: 64\n",
+      "2020\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_013_fpoag'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "for idx in range(4):\n",
+    "    arena_config = generate_arena_config(t=5000, n=10)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%02d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3679,18 +3736,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-08T16:13:32.658297Z",
-     "start_time": "2019-10-08T16:13:32.605597Z"
+     "end_time": "2019-10-08T16:38:04.427674Z",
+     "start_time": "2019-10-08T16:38:04.407796Z"
     }
    },
    "outputs": [],
    "source": [
     "arena_config = ArenaConfig()\n",
     "for idx in range(1):\n",
-    "    arena_config.arenas[idx] = create_arena_with_obstacles_and_deathzones(t=5000)\n",
+    "    arena_config.arenas[idx] = create_arena_splitted_in_two_with_path_blocked(t=5000)\n",
     "    \n",
     "with open(\"temp.yaml\", 'w') as f:\n",
     "    yaml.dump(arena_config, f)"
